cleans more template with the new template manager

--- a/templates/Buttons/Input add-on.hbs
+++ b/templates/Buttons/Input add-on.hbs
@@ -1,14 +1,13 @@
-{{#template}}
+{{#TEMPLATE}}
 <div class="input-group-btn"> <button type="button" id="#BUTTON_ID#" class="btn #BUTTON_CSS_CLASSES#" onclick="#JAVASCRIPT#" #BUTTON_ATTRIBUTES#><i class="#ICON_CSS_CLASSES#"></i>#LABEL#</button></div>
-{{/template}}
-{{#hot_template}}
+{{/TEMPLATE}}
+{{#HOT_TEMPLATE}}{{/HOT_TEMPLATE}}
 
-{{/hot_template}}
-
-{{#template_option_groups}}
+{{#TEMPLATE_OPTION_GROUPS}}
 []
-{{/template_option_groups}}
-
-{{#template_options}}
+{{/TEMPLATE_OPTION_GROUPS}}
+{{#TEMPLATE_OPTIONS}}
 []
-{{/template_options}}
+{{/TEMPLATE_OPTIONS}}
+{{#DEFAULT_TEMPLATE_OPTIONS}}{{/DEFAULT_TEMPLATE_OPTIONS}}
+{{#PRESET_TEMPLATE_OPTIONS}}{{/PRESET_TEMPLATE_OPTIONS}}
