--- a/templates/Regions/Standard.hbs
+++ b/templates/Regions/Standard.hbs
@@ -1,4 +1,4 @@
-{{#template}}
+{{#TEMPLATE}}
 <div id="#REGION_STATIC_ID#" class="ft-region d-flex flex-row justify-content-between #REGION_CSS_CLASSES#" #REGION_ATTRIBUTES#>
 	<div class="ft-region-left align-self-center mr-2">#PREVIOUS#</div>
 
@@ -26,21 +26,16 @@
 
 	<div class="ft-region-right align-self-center ml-2">#NEXT#</div>
 </div>
-{{/template}}
-{{#sub_plug_header_template}}
+{{/TEMPLATE}}
+{{#SUB_PLUG_HEADER_TEMPLATE}}{{/SUB_PLUG_HEADER_TEMPLATE}}
+{{#SUB_PLUG_HEADER_ENTRY_TEMPLATE}}{{/SUB_PLUG_HEADER_ENTRY_TEMPLATE}}
+{{#SUB_PLUG_TEMPLATE}}{{/SUB_PLUG_TEMPLATE}}
 
-{{/sub_plug_header_template}}
-{{#sub_plug_header_entry_template}}
-
-{{/sub_plug_header_entry_template}}
-{{#sub_plug_template}}
-
-{{/sub_plug_template}}
-
-{{#template_option_groups}}
+{{#TEMPLATE_OPTION_GROUPS}}
 []
-{{/template_option_groups}}
-
-{{#template_options}}
+{{/TEMPLATE_OPTION_GROUPS}}
+{{#TEMPLATE_OPTIONS}}
 []
-{{/template_options}}
+{{/TEMPLATE_OPTIONS}}
+{{#DEFAULT_TEMPLATE_OPTIONS}}{{/DEFAULT_TEMPLATE_OPTIONS}}
+{{#PRESET_TEMPLATE_OPTIONS}}{{/PRESET_TEMPLATE_OPTIONS}}
