--- a/templates/Breadcrumbs/Standard.hbs
+++ b/templates/Breadcrumbs/Standard.hbs
@@ -1,33 +1,25 @@
-{{#before_first}}
+{{#BEFORE_FIRST}}
 []
-{{/before_first}}
-	{{#current_page_option}}
-	    <li class="active">#NAME#</li>
-
-	{{/current_page_option}}
-	{{#non_current_page_option}}
-	    <li><a href="#LINK#">#NAME#</a></li>
-
-	{{/non_current_page_option}}
-	{{#menu_link_attributes}}
-	
-	{{/menu_link_attributes}}
-	{{#between_levels}}
-	
-	{{/between_levels}}
-{{#after_last}}
+{{/BEFORE_FIRST}}
+{{#CURRENT_PAGE_OPTION}}
+<li class="active">#NAME#</li>
+{{/CURRENT_PAGE_OPTION}}
+{{#NON_CURRENT_PAGE_OPTION}}
+<li><a href="#LINK#">#NAME#</a></li>
+{{/NON_CURRENT_PAGE_OPTION}}
+{{#MENU_LINK_ATTRIBUTES}}{{/MENU_LINK_ATTRIBUTES}}
+{{#BETWEEN_LEVELS}}{{/BETWEEN_LEVELS}}
+{{#AFTER_LAST}}
 </ol>
+{{/AFTER_LAST}}
 
-{{/after_last}}
+{{#MAX_LEVELS}}{{/MAX_LEVELS}}
 
-{{#max_levels}}
-
-{{/max_levels}}
-
-{{#template_option_groups}}
+{{#TEMPLATE_OPTION_GROUPS}}
 []
-{{/template_option_groups}}
-
-{{#template_options}}
+{{/TEMPLATE_OPTION_GROUPS}}
+{{#TEMPLATE_OPTIONS}}
 []
-{{/template_options}}
+{{/TEMPLATE_OPTIONS}}
+{{#DEFAULT_TEMPLATE_OPTIONS}}{{/DEFAULT_TEMPLATE_OPTIONS}}
+{{#PRESET_TEMPLATE_OPTIONS}}{{/PRESET_TEMPLATE_OPTIONS}}
