--- a/templates/Breadcrumbs/~global.template.options.hbs
+++ b/templates/Breadcrumbs/~global.template.options.hbs
@@ -1,4 +1,6 @@
-{
-  "TEMPLATE_OPTIONS": [],
-  "TEMPLATE_OPTION_GROUPS": []
-}
+{{#TEMPLATE_OPTION_GROUPS}}
+[]
+{{/TEMPLATE_OPTION_GROUPS}}
+{{#TEMPLATE_OPTIONS}}
+[]
+{{/TEMPLATE_OPTIONS}}
