--- a/templates/Buttons/Standard.hbs
+++ b/templates/Buttons/Standard.hbs
@@ -1,15 +1,15 @@
-{{#template}}
+{{#TEMPLATE}}
 <button type="button" id="#BUTTON_ID#" class="btn #BUTTON_CSS_CLASSES#" onclick="#JAVASCRIPT#" #BUTTON_ATTRIBUTES#><i class="#ICON_CSS_CLASSES#"></i>#LABEL#</button>
+{{/TEMPLATE}}
+{{#HOT_TEMPLATE}}{{/HOT_TEMPLATE}}
 
-{{/template}}
-{{#hot_template}}
-
-{{/hot_template}}
-
-{{#template_option_groups}}
+{{#TEMPLATE_OPTION_GROUPS}}
 []
-{{/template_option_groups}}
-
-{{#template_options}}
+{{/TEMPLATE_OPTION_GROUPS}}
+{{#TEMPLATE_OPTIONS}}
 []
-{{/template_options}}
+{{/TEMPLATE_OPTIONS}}
+{{#DEFAULT_TEMPLATE_OPTIONS}}{{/DEFAULT_TEMPLATE_OPTIONS}}
+{{#PRESET_TEMPLATE_OPTIONS}}
+ab-button-tooltip
+{{/PRESET_TEMPLATE_OPTIONS}}
