--- a/templates/Fields/Blockquote (Display only).hbs
+++ b/templates/Fields/Blockquote (Display only).hbs
@@ -1,42 +1,27 @@
-{{#before_label_and_item}}
-
-{{/before_label_and_item}}
-	{{#before_label}}
-
-	{{/before_label}}
-	{{#after_label}}
-
-	{{/after_label}}
-	{{#before_item}}
-	<blockquote class="blockquote #ITEM_CSS_CLASSES#">
-
-	{{/before_item}}
-	{{#after_item}}
-	<footer class="blockquote-footer">#CURRENT_ITEM_HELP_TEXT#</footer>
+{{#BEFORE_LABEL_AND_ITEM}}{{/BEFORE_LABEL_AND_ITEM}}
+{{#BEFORE_LABEL}}{{/BEFORE_LABEL}}
+{{#AFTER_LABEL}}{{/AFTER_LABEL}}
+{{#BEFORE_ITEM}}
+<blockquote class="blockquote #ITEM_CSS_CLASSES#">
+{{/BEFORE_ITEM}}
+{{#AFTER_ITEM}}
+<footer class="blockquote-footer">#CURRENT_ITEM_HELP_TEXT#</footer>
 </blockquote>
+{{/AFTER_ITEM}}
+{{#AFTER_LABEL_AND_ITEM}}{{/AFTER_LABEL_AND_ITEM}}
 
-	{{/after_item}}
-{{#after_label_and_item}}
+{{#ON_ERROR_BEFORE_LABEL}}{{/ON_ERROR_BEFORE_LABEL}}
+{{#ON_ERROR_AFTER_LABEL}}{{/ON_ERROR_AFTER_LABEL}}
+{{#ERROR_TEMPLATE}}{{/ERROR_TEMPLATE}}
+{{#HELP_TEMPLATE}}{{/HELP_TEMPLATE}}
 
-{{/after_label_and_item}}
-
-{{#on_error_before_label}}
-
-{{/on_error_before_label}}
-{{#on_error_after_label}}
-
-{{/on_error_after_label}}
-{{#error_template}}
-
-{{/error_template}}
-{{#help_template}}
-
-{{/help_template}}
-
-{{#template_option_groups}}
+{{#TEMPLATE_OPTION_GROUPS}}
 []
-{{/template_option_groups}}
-
-{{#template_options}}
+{{/TEMPLATE_OPTION_GROUPS}}
+{{#TEMPLATE_OPTIONS}}
 []
-{{/template_options}}
+{{/TEMPLATE_OPTIONS}}
+{{#DEFAULT_TEMPLATE_OPTIONS}}
+hide-blockquote-footer
+{{/DEFAULT_TEMPLATE_OPTIONS}}
+{{#PRESET_TEMPLATE_OPTIONS}}{{/PRESET_TEMPLATE_OPTIONS}}
