--- a/templates/Fields/Input add-on.hbs
+++ b/templates/Fields/Input add-on.hbs
@@ -1,39 +1,24 @@
-{{#before_label_and_item}}
+{{#BEFORE_LABEL_AND_ITEM}}{{/BEFORE_LABEL_AND_ITEM}}
+{{#BEFORE_LABEL}}{{/BEFORE_LABEL}}
+{{#AFTER_LABEL}}{{/AFTER_LABEL}}
+{{#BEFORE_ITEM}}
+<span class="input-group-addon">
+{{/BEFORE_ITEM}}
+{{#AFTER_ITEM}}
+</span>
+{{/AFTER_ITEM}}
+{{#AFTER_LABEL_AND_ITEM}}{{/AFTER_LABEL_AND_ITEM}}
 
-{{/before_label_and_item}}
-	{{#before_label}}
-	
-	{{/before_label}}
-	{{#after_label}}
-	
-	{{/after_label}}
-	{{#before_item}}
-	<span class="input-group-addon">
-	{{/before_item}}
-	{{#after_item}}
-	</span>
-	{{/after_item}}
-{{#after_label_and_item}}
+{{#ON_ERROR_BEFORE_LABEL}}{{/ON_ERROR_BEFORE_LABEL}}
+{{#ON_ERROR_AFTER_LABEL}}{{/ON_ERROR_AFTER_LABEL}}
+{{#ERROR_TEMPLATE}}{{/ERROR_TEMPLATE}}
+{{#HELP_TEMPLATE}}{{/HELP_TEMPLATE}}
 
-{{/after_label_and_item}}
-
-{{#on_error_before_label}}
-
-{{/on_error_before_label}}
-{{#on_error_after_label}}
-
-{{/on_error_after_label}}
-{{#error_template}}
-
-{{/error_template}}
-{{#help_template}}
-
-{{/help_template}}
-
-{{#template_option_groups}}
+{{#TEMPLATE_OPTION_GROUPS}}
 []
-{{/template_option_groups}}
-
-{{#template_options}}
+{{/TEMPLATE_OPTION_GROUPS}}
+{{#TEMPLATE_OPTIONS}}
 []
-{{/template_options}}
+{{/TEMPLATE_OPTIONS}}
+{{#DEFAULT_TEMPLATE_OPTIONS}}{{/DEFAULT_TEMPLATE_OPTIONS}}
+{{#PRESET_TEMPLATE_OPTIONS}}{{/PRESET_TEMPLATE_OPTIONS}}
