--- a/templates/Fields/Standard.hbs
+++ b/templates/Fields/Standard.hbs
@@ -1,40 +1,26 @@
-{{#before_label_and_item}}
+{{#BEFORE_LABEL_AND_ITEM}}{{/BEFORE_LABEL_AND_ITEM}}
+{{#BEFORE_LABEL}}{{/BEFORE_LABEL}}
+{{#AFTER_LABEL}}{{/AFTER_LABEL}}
+{{#BEFORE_ITEM}}
+<div class="form-group #ITEM_CSS_CLASSES#">
+{{/BEFORE_ITEM}}
+{{#AFTER_ITEM}}
+</div>
+{{/AFTER_ITEM}}
+{{#AFTER_LABEL_AND_ITEM}}{{/AFTER_LABEL_AND_ITEM}}
 
-{{/before_label_and_item}}
-	{{#before_label}}
+{{#ON_ERROR_BEFORE_LABEL}}{{/ON_ERROR_BEFORE_LABEL}}
+{{#ON_ERROR_AFTER_LABEL}}{{/ON_ERROR_AFTER_LABEL}}
+{{#ERROR_TEMPLATE}}{{/ERROR_TEMPLATE}}
+{{#HELP_TEMPLATE}}{{/HELP_TEMPLATE}}
 
-	{{/before_label}}
-	{{#after_label}}
-
-	{{/after_label}}
-	{{#before_item}}
-	<div class="form-group #ITEM_CSS_CLASSES#">
-	{{/before_item}}
-	{{#after_item}}
-	</div>
-
-	{{/after_item}}
-{{#after_label_and_item}}
-
-{{/after_label_and_item}}
-
-{{#on_error_before_label}}
-
-{{/on_error_before_label}}
-{{#on_error_after_label}}
-
-{{/on_error_after_label}}
-{{#error_template}}
-
-{{/error_template}}
-{{#help_template}}
-
-{{/help_template}}
-
-{{#template_option_groups}}
+{{#TEMPLATE_OPTION_GROUPS}}
 []
-{{/template_option_groups}}
-
-{{#template_options}}
+{{/TEMPLATE_OPTION_GROUPS}}
+{{#TEMPLATE_OPTIONS}}
 []
-{{/template_options}}
+{{/TEMPLATE_OPTIONS}}
+{{#DEFAULT_TEMPLATE_OPTIONS}}{{/DEFAULT_TEMPLATE_OPTIONS}}
+{{#PRESET_TEMPLATE_OPTIONS}}
+ab-field-tooltip
+{{/PRESET_TEMPLATE_OPTIONS}}
