--- a/templates/Lists/List Group.hbs
+++ b/templates/Lists/List Group.hbs
@@ -1,150 +1,79 @@
-{{#javascript_file_urls}}
+{{#JAVASCRIPT_FILE_URLS}}{{/JAVASCRIPT_FILE_URLS}}
+{{#JAVASCRIPT_CODE_ONLOAD}}{{/JAVASCRIPT_CODE_ONLOAD}}
+{{#CSS_FILE_URLS}}{{/CSS_FILE_URLS}}
+{{#INLINE_CSS}}{{/INLINE_CSS}}
 
-{{/javascript_file_urls}}
-{{#javascript_code_onload}}
-
-{{/javascript_code_onload}}
-{{#css_file_urls}}
-
-{{/css_file_urls}}
-{{#inline_css}}
-
-{{/inline_css}}
-
-{{#list_template_before_rows}}
+{{#LIST_TEMPLATE_BEFORE_ROWS}}
 <div id="#LIST_ID#" class="list-group #COMPONENT_CSS_CLASSES#">
-
-{{/list_template_before_rows}}
-	{{#list_template_current}}
-	    <a href="#LINK#" class="list-group-item list-group-item-#A02# active"><i class="#ICON_CSS_CLASSES#"></i>
+{{/LIST_TEMPLATE_BEFORE_ROWS}}
+{{#LIST_TEMPLATE_CURRENT}}
+<a href="#LINK#" class="list-group-item list-group-item-#A02# active"><i class="#ICON_CSS_CLASSES#"></i>
         <span class="label label-#A04# label-pill pull-xs-right">#A03#</span>
         <h4 class="list-group-item-heading">#A01#</h4>
         <p class="list-group-item-text">#TEXT#</p>
     </a>
-
-	{{/list_template_current}}
-	{{#item_template_curr_w_child}}
-	
-	{{/item_template_curr_w_child}}
-	{{#list_template_noncurrent}}
-	    <a href="#LINK#" class="list-group-item list-group-item-#A02#"><i class="#ICON_CSS_CLASSES#"></i>
+{{/LIST_TEMPLATE_CURRENT}}
+{{#ITEM_TEMPLATE_CURR_W_CHILD}}{{/ITEM_TEMPLATE_CURR_W_CHILD}}
+{{#LIST_TEMPLATE_NONCURRENT}}
+<a href="#LINK#" class="list-group-item list-group-item-#A02#"><i class="#ICON_CSS_CLASSES#"></i>
         <span class="label label-#A04# label-pill pull-xs-right">#A03#</span>
         <h4 class="list-group-item-heading">#A01#</h4>
         <p class="list-group-item-text">#TEXT#</p>
     </a>
+{{/LIST_TEMPLATE_NONCURRENT}}
+{{#ITEM_TEMPLATE_NONCURR_W_CHILD}}{{/ITEM_TEMPLATE_NONCURR_W_CHILD}}
+{{#BETWEEN_ITEMS}}{{/BETWEEN_ITEMS}}
 
-	{{/list_template_noncurrent}}
-	{{#item_template_noncurr_w_child}}
-	
-	{{/item_template_noncurr_w_child}}
-	{{#between_items}}
-	
-	{{/between_items}}
+{{#BEFORE_SUB_LIST}}{{/BEFORE_SUB_LIST}}
+{{#SUB_LIST_ITEM_CURRENT}}{{/SUB_LIST_ITEM_CURRENT}}
+{{#SUB_LIST_ITEM_NONCURRENT}}{{/SUB_LIST_ITEM_NONCURRENT}}
+{{#SUB_TEMPLATE_CURR_W_CHILD}}{{/SUB_TEMPLATE_CURR_W_CHILD}}
+{{#SUB_TEMPLATE_NONCURR_W_CHILD}}{{/SUB_TEMPLATE_NONCURR_W_CHILD}}
+{{#BETWEEN_SUB_LIST_ITEMS}}{{/BETWEEN_SUB_LIST_ITEMS}}
+{{#AFTER_SUB_LIST}}{{/AFTER_SUB_LIST}}
 
-	{{#before_sub_list}}
-	
-	{{/before_sub_list}}
-		{{#sub_list_item_current}}
-		
-		{{/sub_list_item_current}}
-		{{#sub_list_item_noncurrent}}
-		
-		{{/sub_list_item_noncurrent}}
-		{{#sub_template_curr_w_child}}
-		
-		{{/sub_template_curr_w_child}}
-		{{#sub_template_noncurr_w_child}}
-		
-		{{/sub_template_noncurr_w_child}}
-		{{#between_sub_list_items}}
-		
-		{{/between_sub_list_items}}
-	{{#after_sub_list}}
-	
-	{{/after_sub_list}}
-
-	{{#first_list_template_noncurrent}}
-	
-	{{/first_list_template_noncurrent}}
-	{{#first_list_template_current}}
-	
-	{{/first_list_template_current}}
-	{{#f_item_template_curr_w_child}}
-	
-	{{/f_item_template_curr_w_child}}
-	{{#fitem_template_noncurr_w_child}}
-	
-	{{/fitem_template_noncurr_w_child}}
-{{#list_template_after_rows}}
+{{#FIRST_LIST_TEMPLATE_NONCURRENT}}{{/FIRST_LIST_TEMPLATE_NONCURRENT}}
+{{#FIRST_LIST_TEMPLATE_CURRENT}}{{/FIRST_LIST_TEMPLATE_CURRENT}}
+{{#F_ITEM_TEMPLATE_CURR_W_CHILD}}{{/F_ITEM_TEMPLATE_CURR_W_CHILD}}
+{{#FITEM_TEMPLATE_NONCURR_W_CHILD}}{{/FITEM_TEMPLATE_NONCURR_W_CHILD}}
+{{#LIST_TEMPLATE_AFTER_ROWS}}
 </div>
+{{/LIST_TEMPLATE_AFTER_ROWS}}
 
-{{/list_template_after_rows}}
-
-{{#a01_label}}
+{{#A01_LABEL}}
 List Group Item Heading
-{{/a01_label}}
-{{#a02_label}}
+{{/A01_LABEL}}
+{{#A02_LABEL}}
 List Group Item Style (success, info, warning, danger)
-{{/a02_label}}
-{{#a03_label}}
+{{/A02_LABEL}}
+{{#A03_LABEL}}
 Label Pill Style (default, primary, success, info, warning, danger)
-{{/a03_label}}
-{{#a04_label}}
+{{/A03_LABEL}}
+{{#A04_LABEL}}
 Label Text
-{{/a04_label}}
-{{#a05_label}}
+{{/A04_LABEL}}
+{{#A05_LABEL}}{{/A05_LABEL}}
+{{#A06_LABEL}}{{/A06_LABEL}}
+{{#A07_LABEL}}{{/A07_LABEL}}
+{{#A08_LABEL}}{{/A08_LABEL}}
+{{#A09_LABEL}}{{/A09_LABEL}}
+{{#A10_LABEL}}{{/A10_LABEL}}
+{{#A11_LABEL}}{{/A11_LABEL}}
+{{#A12_LABEL}}{{/A12_LABEL}}
+{{#A13_LABEL}}{{/A13_LABEL}}
+{{#A14_LABEL}}{{/A14_LABEL}}
+{{#A15_LABEL}}{{/A15_LABEL}}
+{{#A16_LABEL}}{{/A16_LABEL}}
+{{#A17_LABEL}}{{/A17_LABEL}}
+{{#A18_LABEL}}{{/A18_LABEL}}
+{{#A19_LABEL}}{{/A19_LABEL}}
+{{#A20_LABEL}}{{/A20_LABEL}}
 
-{{/a05_label}}
-{{#a06_label}}
-
-{{/a06_label}}
-{{#a07_label}}
-
-{{/a07_label}}
-{{#a08_label}}
-
-{{/a08_label}}
-{{#a09_label}}
-
-{{/a09_label}}
-{{#a10_label}}
-
-{{/a10_label}}
-{{#a11_label}}
-
-{{/a11_label}}
-{{#a12_label}}
-
-{{/a12_label}}
-{{#a13_label}}
-
-{{/a13_label}}
-{{#a14_label}}
-
-{{/a14_label}}
-{{#a15_label}}
-
-{{/a15_label}}
-{{#a16_label}}
-
-{{/a16_label}}
-{{#a17_label}}
-
-{{/a17_label}}
-{{#a18_label}}
-
-{{/a18_label}}
-{{#a19_label}}
-
-{{/a19_label}}
-{{#a20_label}}
-
-{{/a20_label}}
-
-{{#template_option_groups}}
+{{#TEMPLATE_OPTION_GROUPS}}
 []
-{{/template_option_groups}}
-
-{{#template_options}}
+{{/TEMPLATE_OPTION_GROUPS}}
+{{#TEMPLATE_OPTIONS}}
 []
-{{/template_options}}
+{{/TEMPLATE_OPTIONS}}
+{{#DEFAULT_TEMPLATE_OPTIONS}}{{/DEFAULT_TEMPLATE_OPTIONS}}
+{{#PRESET_TEMPLATE_OPTIONS}}{{/PRESET_TEMPLATE_OPTIONS}}
