--- a/templates/Regions/Card.hbs
+++ b/templates/Regions/Card.hbs
@@ -1,20 +1,17 @@
-{{#template}}
+{{#TEMPLATE}}
 <div id="#REGION_STATIC_ID#" class="ft-region card #REGION_CSS_CLASSES#" #REGION_ATTRIBUTES#><div class="card-block"><h4 class="card-title">#TITLE#</h4><blockquote class="card-text"> #BODY#</blockquote><div class="btn-toolbar" role="toolbar" aria-label="Toolbar"><div class="ft-btn-group" role="group" aria-label="Button Group">#EDIT#</div><div class="ft-btn-group" role="group" aria-label="Button Group">#EXPAND#</div><div class="ft-btn-group" role="group" aria-label="Button Group">#CREATE#</div><div class="ft-btn-group" role="group" aria-label="Button Group">#CREATE2#</div><div class="ft-btn-group" role="group" aria-label="Button Group">#NEXT#</div><div class="ft-btn-group" role="group" aria-label="Button Group">#PREVIOUS#</div><div class="ft-btn-group" role="group" aria-label="Button Group">#CLOSE#</div><div class="ft-btn-group" role="group" aria-label="Button Group">#COPY#</div><div class="ft-btn-group" role="group" aria-label="Button Group">#DELETE#</div><div class="ft-btn-group" role="group" aria-label="Button Group">#CHANGE#</div><div class="ft-btn-group" role="group" aria-label="Button Group">#HELP#</div></div></div> #SUB_REGION_HEADERS# #SUB_REGIONS#</div>
-{{/template}}
-{{#sub_plug_header_template}}
+{{/TEMPLATE}}
+{{#SUB_PLUG_HEADER_TEMPLATE}}
 <div class="card-header"> #SUB_REGION_HEADERS#</div>
-{{/sub_plug_header_template}}
-{{#sub_plug_header_entry_template}}
+{{/SUB_PLUG_HEADER_TEMPLATE}}
+{{#SUB_PLUG_HEADER_ENTRY_TEMPLATE}}{{/SUB_PLUG_HEADER_ENTRY_TEMPLATE}}
+{{#SUB_PLUG_TEMPLATE}}{{/SUB_PLUG_TEMPLATE}}
 
-{{/sub_plug_header_entry_template}}
-{{#sub_plug_template}}
-
-{{/sub_plug_template}}
-
-{{#template_option_groups}}
+{{#TEMPLATE_OPTION_GROUPS}}
 []
-{{/template_option_groups}}
-
-{{#template_options}}
+{{/TEMPLATE_OPTION_GROUPS}}
+{{#TEMPLATE_OPTIONS}}
 []
-{{/template_options}}
+{{/TEMPLATE_OPTIONS}}
+{{#DEFAULT_TEMPLATE_OPTIONS}}{{/DEFAULT_TEMPLATE_OPTIONS}}
+{{#PRESET_TEMPLATE_OPTIONS}}{{/PRESET_TEMPLATE_OPTIONS}}
