--- a/templates/ReportNamedColumns/Carousel.hbs
+++ b/templates/ReportNamedColumns/Carousel.hbs
@@ -1,82 +1,61 @@
-{{#row_template_before_rows}}
+{{#ROW_TEMPLATE_BEFORE_ROWS}}
 <div id="carousel-#REGION_STATIC_ID#" class="carousel slide" data-ride="carousel">
 <ol class="carousel-indicators"></ol>
 <div class="carousel-inner" role="listbox">
+{{/ROW_TEMPLATE_BEFORE_ROWS}}
 
-{{/row_template_before_rows}}
+{{#BEFORE_COLUMN_HEADING}}{{/BEFORE_COLUMN_HEADING}}
 
-{{#before_column_heading}}
+{{#COLUMN_HEADING_TEMPLATE}}{{/COLUMN_HEADING_TEMPLATE}}
 
-{{/before_column_heading}}
+{{#AFTER_COLUMN_HEADING}}{{/AFTER_COLUMN_HEADING}}
 
-	{{#column_heading_template}}
-	
-	{{/column_heading_template}}
+{{#ROW_TEMPLATE_BEFORE_FIRST}}{{/ROW_TEMPLATE_BEFORE_FIRST}}
 
-{{#after_column_heading}}
-
-{{/after_column_heading}}
-
-	{{#row_template_before_first}}
-	
-	{{/row_template_before_first}}
-
-		{{#row_template1}}
-		        <div class="carousel-item active">
+{{#ROW_TEMPLATE1}}
+<div class="carousel-item active">
             <img src="#IMG_SOURCE#" alt="#IMG_ALT#">
             <div class="carousel-caption">
                 <h3>#CAPTION_TITLE#</h3>
                 <p>#CAPTION_TEXT#</p>
             </div>
         </div>
-
-		{{/row_template1}}
-		{{#row_template_condition1}}
-		#ROWNUM# = 1
-		{{/row_template_condition1}}
-		{{#row_template_display_cond1}}
-		NOT_CONDITIONAL
-		{{/row_template_display_cond1}}
-		{{#row_template2}}
-		        <div class="carousel-item">
+{{/ROW_TEMPLATE1}}
+{{#ROW_TEMPLATE_CONDITION1}}
+#ROWNUM# = 1
+{{/ROW_TEMPLATE_CONDITION1}}
+{{#ROW_TEMPLATE_DISPLAY_COND1}}
+NOT_CONDITIONAL
+{{/ROW_TEMPLATE_DISPLAY_COND1}}
+{{#ROW_TEMPLATE2}}
+<div class="carousel-item">
             <img src="#IMG_SOURCE#" alt="#IMG_ALT#">
             <div class="carousel-caption">
                 <h3>#CAPTION_TITLE#</h3>
                 <p>#CAPTION_TEXT#</p>
             </div>
         </div>
+{{/ROW_TEMPLATE2}}
+{{#ROW_TEMPLATE_CONDITION2}}
+#ROWNUM# <> 1
+{{/ROW_TEMPLATE_CONDITION2}}
+{{#ROW_TEMPLATE_DISPLAY_COND2}}
+NOT_CONDITIONAL
+{{/ROW_TEMPLATE_DISPLAY_COND2}}
+{{#ROW_TEMPLATE3}}{{/ROW_TEMPLATE3}}
+{{#ROW_TEMPLATE_CONDITION3}}{{/ROW_TEMPLATE_CONDITION3}}
+{{#ROW_TEMPLATE_DISPLAY_COND3}}
+0
+{{/ROW_TEMPLATE_DISPLAY_COND3}}
+{{#ROW_TEMPLATE4}}{{/ROW_TEMPLATE4}}
+{{#ROW_TEMPLATE_CONDITION4}}{{/ROW_TEMPLATE_CONDITION4}}
+{{#ROW_TEMPLATE_DISPLAY_COND4}}
+NOT_CONDITIONAL
+{{/ROW_TEMPLATE_DISPLAY_COND4}}
 
-		{{/row_template2}}
-		{{#row_template_condition2}}
-		#ROWNUM# <> 1
-		{{/row_template_condition2}}
-		{{#row_template_display_cond2}}
-		NOT_CONDITIONAL
-		{{/row_template_display_cond2}}
-		{{#row_template3}}
-		
-		{{/row_template3}}
-		{{#row_template_condition3}}
-		
-		{{/row_template_condition3}}
-		{{#row_template_display_cond3}}
-		0
-		{{/row_template_display_cond3}}
-		{{#row_template4}}
-		
-		{{/row_template4}}
-		{{#row_template_condition4}}
-		
-		{{/row_template_condition4}}
-		{{#row_template_display_cond4}}
-		NOT_CONDITIONAL
-		{{/row_template_display_cond4}}
+{{#ROW_TEMPLATE_AFTER_LAST}}{{/ROW_TEMPLATE_AFTER_LAST}}
 
-	{{#row_template_after_last}}
-	
-	{{/row_template_after_last}}
-
-{{#row_template_after_rows}}
+{{#ROW_TEMPLATE_AFTER_ROWS}}
 <a class="left carousel-control" href="#carousel-#REGION_STATIC_ID#" role="button" data-slide="prev">
     <span class="icon-prev" aria-hidden="true"></span>
     <span class="sr-only">Previous</span>
@@ -87,29 +66,19 @@
 </a>
 </div>
 </div>
+{{/ROW_TEMPLATE_AFTER_ROWS}}
 
-{{/row_template_after_rows}}
+{{#PAGINATION_TEMPLATE}}{{/PAGINATION_TEMPLATE}}
+{{#NEXT_PAGE_TEMPLATE}}{{/NEXT_PAGE_TEMPLATE}}
+{{#PREVIOUS_PAGE_TEMPLATE}}{{/PREVIOUS_PAGE_TEMPLATE}}
+{{#NEXT_SET_TEMPLATE}}{{/NEXT_SET_TEMPLATE}}
+{{#PREVIOUS_SET_TEMPLATE}}{{/PREVIOUS_SET_TEMPLATE}}
 
-{{#pagination_template}}
-
-{{/pagination_template}}
-{{#next_page_template}}
-
-{{/next_page_template}}
-{{#previous_page_template}}
-
-{{/previous_page_template}}
-{{#next_set_template}}
-
-{{/next_set_template}}
-{{#previous_set_template}}
-
-{{/previous_set_template}}
-
-{{#template_option_groups}}
+{{#TEMPLATE_OPTION_GROUPS}}
 []
-{{/template_option_groups}}
-
-{{#template_options}}
+{{/TEMPLATE_OPTION_GROUPS}}
+{{#TEMPLATE_OPTIONS}}
 []
-{{/template_options}}
+{{/TEMPLATE_OPTIONS}}
+{{#DEFAULT_TEMPLATE_OPTIONS}}{{/DEFAULT_TEMPLATE_OPTIONS}}
+{{#PRESET_TEMPLATE_OPTIONS}}{{/PRESET_TEMPLATE_OPTIONS}}
