--- a/templates/ReportNamedColumns/Media.hbs
+++ b/templates/ReportNamedColumns/Media.hbs
@@ -1,26 +1,17 @@
-{{#row_template_before_rows}}
+{{#ROW_TEMPLATE_BEFORE_ROWS}}
 <ul class="media-list">
+{{/ROW_TEMPLATE_BEFORE_ROWS}}
 
-{{/row_template_before_rows}}
+{{#BEFORE_COLUMN_HEADING}}{{/BEFORE_COLUMN_HEADING}}
 
-{{#before_column_heading}}
+{{#COLUMN_HEADING_TEMPLATE}}{{/COLUMN_HEADING_TEMPLATE}}
 
-{{/before_column_heading}}
+{{#AFTER_COLUMN_HEADING}}{{/AFTER_COLUMN_HEADING}}
 
-	{{#column_heading_template}}
-	
-	{{/column_heading_template}}
+{{#ROW_TEMPLATE_BEFORE_FIRST}}{{/ROW_TEMPLATE_BEFORE_FIRST}}
 
-{{#after_column_heading}}
-
-{{/after_column_heading}}
-
-	{{#row_template_before_first}}
-	
-	{{/row_template_before_first}}
-
-		{{#row_template1}}
-		        <li class="media #COMPONENT_CSS_CLASSES#">
+{{#ROW_TEMPLATE1}}
+<li class="media #COMPONENT_CSS_CLASSES#">
             <a class="media-left" href="#MEDIA_LINK#">
                 <img class="media-object" src="#MEDIA_IMG_SOURCE#">
             </a>
@@ -29,71 +20,44 @@
                 #MEDIA_DESCRIPTION#
             </div>
         </li>
+{{/ROW_TEMPLATE1}}
+{{#ROW_TEMPLATE_CONDITION1}}{{/ROW_TEMPLATE_CONDITION1}}
+{{#ROW_TEMPLATE_DISPLAY_COND1}}
+0
+{{/ROW_TEMPLATE_DISPLAY_COND1}}
+{{#ROW_TEMPLATE2}}{{/ROW_TEMPLATE2}}
+{{#ROW_TEMPLATE_CONDITION2}}{{/ROW_TEMPLATE_CONDITION2}}
+{{#ROW_TEMPLATE_DISPLAY_COND2}}
+0
+{{/ROW_TEMPLATE_DISPLAY_COND2}}
+{{#ROW_TEMPLATE3}}{{/ROW_TEMPLATE3}}
+{{#ROW_TEMPLATE_CONDITION3}}{{/ROW_TEMPLATE_CONDITION3}}
+{{#ROW_TEMPLATE_DISPLAY_COND3}}
+0
+{{/ROW_TEMPLATE_DISPLAY_COND3}}
+{{#ROW_TEMPLATE4}}{{/ROW_TEMPLATE4}}
+{{#ROW_TEMPLATE_CONDITION4}}{{/ROW_TEMPLATE_CONDITION4}}
+{{#ROW_TEMPLATE_DISPLAY_COND4}}
+0
+{{/ROW_TEMPLATE_DISPLAY_COND4}}
 
-		{{/row_template1}}
-		{{#row_template_condition1}}
-		
-		{{/row_template_condition1}}
-		{{#row_template_display_cond1}}
-		0
-		{{/row_template_display_cond1}}
-		{{#row_template2}}
-		
-		{{/row_template2}}
-		{{#row_template_condition2}}
-		
-		{{/row_template_condition2}}
-		{{#row_template_display_cond2}}
-		0
-		{{/row_template_display_cond2}}
-		{{#row_template3}}
-		
-		{{/row_template3}}
-		{{#row_template_condition3}}
-		
-		{{/row_template_condition3}}
-		{{#row_template_display_cond3}}
-		0
-		{{/row_template_display_cond3}}
-		{{#row_template4}}
-		
-		{{/row_template4}}
-		{{#row_template_condition4}}
-		
-		{{/row_template_condition4}}
-		{{#row_template_display_cond4}}
-		0
-		{{/row_template_display_cond4}}
+{{#ROW_TEMPLATE_AFTER_LAST}}{{/ROW_TEMPLATE_AFTER_LAST}}
 
-	{{#row_template_after_last}}
-	
-	{{/row_template_after_last}}
-
-{{#row_template_after_rows}}
+{{#ROW_TEMPLATE_AFTER_ROWS}}
 </ul>
+{{/ROW_TEMPLATE_AFTER_ROWS}}
 
-{{/row_template_after_rows}}
+{{#PAGINATION_TEMPLATE}}{{/PAGINATION_TEMPLATE}}
+{{#NEXT_PAGE_TEMPLATE}}{{/NEXT_PAGE_TEMPLATE}}
+{{#PREVIOUS_PAGE_TEMPLATE}}{{/PREVIOUS_PAGE_TEMPLATE}}
+{{#NEXT_SET_TEMPLATE}}{{/NEXT_SET_TEMPLATE}}
+{{#PREVIOUS_SET_TEMPLATE}}{{/PREVIOUS_SET_TEMPLATE}}
 
-{{#pagination_template}}
-
-{{/pagination_template}}
-{{#next_page_template}}
-
-{{/next_page_template}}
-{{#previous_page_template}}
-
-{{/previous_page_template}}
-{{#next_set_template}}
-
-{{/next_set_template}}
-{{#previous_set_template}}
-
-{{/previous_set_template}}
-
-{{#template_option_groups}}
+{{#TEMPLATE_OPTION_GROUPS}}
 []
-{{/template_option_groups}}
-
-{{#template_options}}
+{{/TEMPLATE_OPTION_GROUPS}}
+{{#TEMPLATE_OPTIONS}}
 []
-{{/template_options}}
+{{/TEMPLATE_OPTIONS}}
+{{#DEFAULT_TEMPLATE_OPTIONS}}{{/DEFAULT_TEMPLATE_OPTIONS}}
+{{#PRESET_TEMPLATE_OPTIONS}}{{/PRESET_TEMPLATE_OPTIONS}}
